Create ScrollView Boxes

--- a/OneRM/OneRM/MainPage.xaml
+++ b/OneRM/OneRM/MainPage.xaml
@@ -1,85 +1,161 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:viewmodels = "clr-namespace:OneRM.ViewModels"
-             mc:Ignorable="d"
-             BackgroundColor="White"
-             x:Class="OneRM.MainPage">
+<ContentPage
+    x:Class="OneRM.MainPage"
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:converters="clr-namespace:OneRM.Converter"
+    xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:pancake="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
+    xmlns:viewmodels="clr-namespace:OneRM.ViewModels"
+    BackgroundColor="White"
+    mc:Ignorable="d">
 
     <ContentPage.BindingContext>
         <viewmodels:MainViewModel />
     </ContentPage.BindingContext>
-    
+
     <ContentPage.Resources>
         <ResourceDictionary>
             <!--<Color x:Key="ButtonBackgroundColor">#F5F9FA</Color>-->
             <Color x:Key="ButtonBackgroundColor">#F5F9FA</Color>
             <Color x:Key="TextColor">#313643</Color>
 
+            <converters:BoolToStringConverter
+                x:Key="FeaturedHeightConverter"
+                FalseString="170"
+                TrueString="240" />
+
             <Style x:Key="HeaderFontLight" TargetType="Label">
                 <Setter Property="FontFamily" Value="{StaticResource MontserratLight}" />
                 <Setter Property="FontSize" Value="28" />
-                <Setter Property="TextColor" Value="{StaticResource TextColor}"/>
+                <Setter Property="TextColor" Value="{StaticResource TextColor}" />
             </Style>
             <Style x:Key="HeaderFontMedium" TargetType="Label">
                 <Setter Property="FontFamily" Value="{StaticResource MontserratMedium}" />
                 <Setter Property="FontSize" Value="28" />
-                <Setter Property="TextColor" Value="{StaticResource TextColor}"/>
+                <Setter Property="TextColor" Value="{StaticResource TextColor}" />
             </Style>
             <Style x:Key="ButtonStyle" TargetType="ImageButton">
-                <Setter Property="BackgroundColor" Value="{StaticResource ButtonBackgroundColor}"/>
+                <Setter Property="BackgroundColor" Value="{StaticResource ButtonBackgroundColor}" />
                 <Setter Property="CornerRadius" Value="14" />
             </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
-    
+
     <AbsoluteLayout>
-        <ImageButton 
+        <ImageButton
             Padding="10"
-            AbsoluteLayout.LayoutBounds="20, 20, 48, 48" 
+            AbsoluteLayout.LayoutBounds="20, 20, 48, 48"
             BackgroundColor="White"
-            Source="hamburger_icon"/>
-        <ImageButton 
+            Source="hamburger_icon" />
+        <ImageButton
             Padding="10"
             AbsoluteLayout.LayoutBounds="340, 20, 48, 48"
             Source="baseline_timer_black_18"
-            Style="{StaticResource ButtonStyle}"/>
-        <StackLayout
-            AbsoluteLayout.LayoutBounds="20, 100, 340, 100">
-            <Label Style="{StaticResource HeaderFontLight}" Text="Выбери своё"/>
+            Style="{StaticResource ButtonStyle}" />
+        <StackLayout AbsoluteLayout.LayoutBounds="20, 100, 340, 100">
+            <Label Style="{StaticResource HeaderFontLight}" Text="Выбери своё" />
             <Label Style="{StaticResource HeaderFontMedium}" Text="упражнение" />
         </StackLayout>
 
         <BoxView
             AbsoluteLayout.LayoutBounds="20, 200, 300, 48"
             BackgroundColor="{StaticResource ButtonBackgroundColor}"
-            CornerRadius="10"/>
+            CornerRadius="10" />
 
         <ImageButton
             Padding="14"
             AbsoluteLayout.LayoutBounds="20, 200, 48, 48"
             BackgroundColor="Transparent"
             Source="search_icon"
-            Style="{StaticResource ButtonStyle}"/>
+            Style="{StaticResource ButtonStyle}" />
 
-        <Entry AbsoluteLayout.LayoutBounds="60, 200, 240, 48" Placeholder="Search"/>
+        <Entry AbsoluteLayout.LayoutBounds="60, 200, 240, 48" Placeholder="Search" />
 
         <ImageButton
             Padding="14"
             AbsoluteLayout.LayoutBounds="340, 200, 48, 48"
             BackgroundColor="{StaticResource ButtonBackgroundColor}"
             Source="settings_icon"
-            Style="{StaticResource ButtonStyle}"/>
+            Style="{StaticResource ButtonStyle}" />
 
 
-        <ScrollView 
-            AbsoluteLayout.LayoutFlags="SizeProportional"
-            AbsoluteLayout.LayoutBounds="20, 300, 0.9, 1" 
-            BackgroundColor="Yellow">
-            
+        <ScrollView AbsoluteLayout.LayoutBounds="20, 300, 380, 300">
+
+            <FlexLayout
+                BindableLayout.ItemsSource="{Binding Exercises}"
+                Direction="Column"
+                HeightRequest="450"
+                HorizontalOptions="Center"
+                Wrap="Wrap">
+                <BindableLayout.ItemTemplate>
+                    <DataTemplate>
+                        <pancake:PancakeView
+                            Margin="10"
+                            BackgroundColor="{Binding HeroColor}"
+                            CornerRadius="20"
+                            HeightRequest="{Binding IsFeatured, Converter={StaticResource FeaturedHeightConverter}}"
+                            WidthRequest="160">
+                            <Grid>
+                                <BoxView
+                                    CornerRadius="0, 0, 20, 0"
+                                    HeightRequest="40"
+                                    HorizontalOptions="End"
+                                    Opacity=".5"
+                                    VerticalOptions="Start"
+                                    WidthRequest="40"
+                                    Color="White" />
+                                <Label
+                                    FontSize="20"
+                                    HeightRequest="40"
+                                    HorizontalOptions="End"
+                                    HorizontalTextAlignment="Center"
+                                    Text="+"
+                                    TextColor="White"
+                                    VerticalOptions="Start"
+                                    VerticalTextAlignment="Center"
+                                    WidthRequest="40" />
+                                <StackLayout Orientation="Vertical" Spacing="0">
+                                    <Label
+                                        Margin="10,10,0,0"
+                                        FontAttributes="Bold"
+                                        FontSize="16"
+                                        Style="{StaticResource HeaderFontMedium}"
+                                        Text="{Binding Name}"
+                                        TextColor="White" />
+                                    <StackLayout
+                                        Margin="10,0"
+                                        Padding="0"
+                                        Orientation="Horizontal"
+                                        Spacing="0">
+                                        <Label
+                                            FontSize="40"
+                                            Text="{Binding Weight}"
+                                            TextColor="White"
+                                            VerticalOptions="Start"
+                                            VerticalTextAlignment="Start" />
+                                        <Label
+                                            Margin="3"
+                                            Text="кг"
+                                            TextColor="White"
+                                            TranslationY="10"
+                                            VerticalOptions="Start" />
+                                        <!--<Label VerticalTextAlignment="Start" VerticalOptions="Start">
+                                            <Label.FormattedText>
+                                                <FormattedString>
+                                                    <Span Text="{Binding Weight}" FontSize="40"/>
+                                                    <Span Text="кг" FontSize="20"/>
+                                                </FormattedString>
+                                            </Label.FormattedText>
+                                        </Label>-->
+                                    </StackLayout>
+                                </StackLayout>
+                            </Grid>
+                        </pancake:PancakeView>
+                    </DataTemplate>
+                </BindableLayout.ItemTemplate>
+            </FlexLayout>
         </ScrollView>
-
     </AbsoluteLayout>
 </ContentPage>
