--- a/OneRM/OneRM/MainPage.xaml
+++ b/OneRM/OneRM/MainPage.xaml
@@ -57,7 +57,7 @@
             AbsoluteLayout.LayoutBounds="340, 20, 48, 48"
             Source="basket_icon"
             Style="{StaticResource ButtonStyle}" />
-        <StackLayout AbsoluteLayout.LayoutBounds="20, 100, 340, 100">
+        <StackLayout x:Name="Header" AbsoluteLayout.LayoutBounds="20, 100, 340, 100">
             <Label Style="{StaticResource HeaderFontLight}" Text="Выбери своё" />
             <Label Style="{StaticResource HeaderFontMedium}" Text="упражнение" />
         </StackLayout>
@@ -76,7 +76,10 @@
             Source="search_icon"
             Style="{StaticResource ButtonStyle}" />
 
-        <Entry AbsoluteLayout.LayoutBounds="60, 200, 240, 48" Placeholder="Search" />
+        <Entry
+            x:Name="SearchEntry"
+            AbsoluteLayout.LayoutBounds="60, 200, 240, 48"
+            Placeholder="Search" />
 
         <ImageButton
             x:Name="SettingsIcon"
