--- a/OneRM/OneRM/Controls/ExerciseDisplay.xaml
+++ b/OneRM/OneRM/Controls/ExerciseDisplay.xaml
@@ -65,11 +65,10 @@
                 </StackLayout>
             </StackLayout>
             <Image
-                HorizontalOptions="End"
+                x:Name="ExerciseImage"
+                HorizontalOptions="Center"
                 Source="{Binding ImageUrl}"
-                TranslationX="40"
-                TranslationY="40"
-                VerticalOptions="End" />
+                VerticalOptions="Start" />
         </Grid>
     </pancake:PancakeView>
 
