--- a/OneRM/OneRM/App.xaml
+++ b/OneRM/OneRM/App.xaml
@@ -25,8 +25,10 @@
                 <On Platform="iOS" Value="Montserrat-Light" />
                 <On Platform="Android" Value="Montserrat-Light.ttf#Regular" />
             </OnPlatform>
+
             <Color x:Key="ButtonBackgroundColor">#F5F9FA</Color>
             <Color x:Key="TextColor">#313643</Color>
+            <Color x:Key="LightTextColor">#B2B2B2</Color>
 
             <converters:BoolToStringConverter
                 x:Key="FeaturedHeightConverter"
@@ -46,6 +48,16 @@
             <Style x:Key="ButtonStyle" TargetType="ImageButton">
                 <Setter Property="BackgroundColor" Value="{StaticResource ButtonBackgroundColor}" />
                 <Setter Property="CornerRadius" Value="14" />
+            </Style>
+            <Style x:Key="BodyFontMedium" TargetType="Label">
+                <Setter Property="FontFamily" Value="{StaticResource MontserratMedium}" />
+                <Setter Property="FontSize" Value="12" />
+                <Setter Property="TextColor" Value="{StaticResource LightTextColor}" />
+            </Style>
+            <Style x:Key="BodyFontLight" TargetType="Label">
+                <Setter Property="FontFamily" Value="{StaticResource MontserratLight}" />
+                <Setter Property="FontSize" Value="12" />
+                <Setter Property="TextColor" Value="{StaticResource LightTextColor}" />
             </Style>
             <Style TargetType="Grid">
                 <Setter Property="RowSpacing" Value="0" />
